--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         }
       }
       </script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   </head>
   <body>
     <nav id="desktop-nav">
@@ -65,9 +66,26 @@
           </button>
         </div>
         <div id="socials-container">
-          <img src="./assets/linkedin.png" alt="LinkedIn" class="icon" onclick="location.href='https://www.linkedin.com/in/sahil-tarofawala-b88b53254/'" />
-          <img src="./assets/github.png" alt="Github" class="icon" onclick="location.href='https://github.com/sahil-programmer'" />
-        </div>
+          <!-- LinkedIn Link -->
+          <div class="social-item">
+              <a href="https://www.linkedin.com/in/sahil-tarofawala-b88b53254/" 
+                 target="_blank" 
+                 rel="noopener noreferrer"
+                 class="social-link">
+                  <img src="./assets/linkedin.png" alt="LinkedIn" class="icon" />
+              </a>
+          </div>
+          
+          <!-- GitHub Link -->
+          <div class="social-item">
+              <a href="https://github.com/sahil-programmer" 
+                 target="_blank" 
+                 rel="noopener noreferrer"
+                 class="social-link">
+                  <img src="./assets/github.png" alt="Github" class="icon" />
+              </a>
+          </div>
+      </div>
       </div>
     </section>
     <section id="about">
