Your commit message here

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Profile Section -->
     <section id="profile">
       <div class="section__pic-container" onclick="animateProfile()">
-        <div class="glow"></div>
+        <!-- <div class="glow"></div> -->
         <img src="./assets/portflioImage-photoaidcom-cropped.jpg" alt="Sahil Tarofawala profile picture" class="profile-pic hover-scale" />
       </div>
       <div class="section__text">
